--- a/utility/pom.xml
+++ b/utility/pom.xml
@@ -16,5 +16,10 @@
       <artifactId>hibernate-core</artifactId>
       <version>5.2.15.Final</version>
     </dependency>
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>3.7</version>
+    </dependency>
   </dependencies>
  </project>
