--- a/app/src/main/webapp/WEB-INF/web.xml
+++ b/app/src/main/webapp/WEB-INF/web.xml
@@ -2,168 +2,15 @@
  "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
-
-    <servlet>
-	   <servlet-name>PersonOrderedList</servlet-name>
-	   <servlet-class>PersonOrderedList</servlet-class>
-	</servlet>
-
-	<servlet-mapping>
-	   <servlet-name>PersonOrderedList</servlet-name>
-	   <url-pattern>/PersonOrderedList</url-pattern>
-	</servlet-mapping>
-
-	<servlet>
-	   <servlet-name>AddPerson</servlet-name>
-	   <servlet-class>AddPerson</servlet-class>
-	</servlet>
-
-	<servlet-mapping>
-	   <servlet-name>AddPerson</servlet-name>
-	   <url-pattern>/AddPerson</url-pattern>
-	</servlet-mapping>
-
-	<servlet>
-	   <servlet-name>DeletePerson</servlet-name>
-	   <servlet-class>DeletePerson</servlet-class>
-	</servlet>
-
-	<servlet-mapping>
-	   <servlet-name>DeletePerson</servlet-name>
-	   <url-pattern>/DeletePerson</url-pattern>
-	</servlet-mapping>
-
-	<servlet>
-	   <servlet-name>UpdatePerson</servlet-name>
-	   <servlet-class>UpdatePerson</servlet-class>
-	</servlet>
-
-	<servlet-mapping>
-	   <servlet-name>UpdatePerson</servlet-name>
-	   <url-pattern>/UpdatePerson</url-pattern>
-	</servlet-mapping>
-
-	<servlet>
-	   <servlet-name>UpdatePersonView</servlet-name>
-	   <servlet-class>UpdatePersonView</servlet-class>
-	</servlet>
-
-	<servlet-mapping>
-	   <servlet-name>UpdatePersonView</servlet-name>
-	   <url-pattern>/UpdatePersonView</url-pattern>
-	</servlet-mapping>
+<web-app xmlns="http://java.sun.com/xml/ns/javaee" 
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+    version="3.0">
+  <display-name>Simple Servlet Application</display-name>
 
 
-	<servlet>
-	   <servlet-name>PersonList</servlet-name>
-	   <servlet-class>PersonList</servlet-class>
-	</servlet>
-
-	<servlet-mapping>
-	   <servlet-name>PersonList</servlet-name>
-	   <url-pattern>/PersonList</url-pattern>
-	</servlet-mapping>
-
-	<servlet>
-	   <servlet-name>ContactList</servlet-name>
-	   <servlet-class>ContactList</servlet-class>
-	</servlet>
-
-	<servlet-mapping>
-	   <servlet-name>ContactList</servlet-name>
-	   <url-pattern>/ContactList</url-pattern>
-	</servlet-mapping>
-
-	<servlet>
-	   <servlet-name>DeleteContact</servlet-name>
-	   <servlet-class>DeleteContact</servlet-class>
-	</servlet>
-
-	<servlet-mapping>
-	   <servlet-name>DeleteContact</servlet-name>
-	   <url-pattern>/DeleteContact</url-pattern>
-	</servlet-mapping>
-
-	<servlet>
-	   <servlet-name>AddContact</servlet-name>
-	   <servlet-class>AddContact</servlet-class>
-	</servlet>
-
-	<servlet-mapping>
-	   <servlet-name>AddContact</servlet-name>
-	   <url-pattern>/AddContact</url-pattern>
-	</servlet-mapping>
-
-	<servlet>
-	   <servlet-name>AddContactView</servlet-name>
-	   <servlet-class>AddContactView</servlet-class>
-	</servlet>
-
-	<servlet-mapping>
-	   <servlet-name>AddContactView</servlet-name>
-	   <url-pattern>/AddContactView</url-pattern>
-	</servlet-mapping>
-
-	<servlet>
-	   <servlet-name>UpdateContact</servlet-name>
-	   <servlet-class>UpdateContact</servlet-class>
-	</servlet>
-
-	<servlet-mapping>
-	   <servlet-name>UpdateContact</servlet-name>
-	   <url-pattern>/UpdateContact</url-pattern>
-	</servlet-mapping>
-
-	<servlet>
-	   <servlet-name>UpdateContactView</servlet-name>
-	   <servlet-class>UpdateContactView</servlet-class>
-	</servlet>
-
-	<servlet-mapping>
-	   <servlet-name>UpdateContactView</servlet-name>
-	   <url-pattern>/UpdateContactView</url-pattern>
-	</servlet-mapping>
-
-	<servlet>
-	   <servlet-name>AddRole</servlet-name>
-	   <servlet-class>AddRole</servlet-class>
-	</servlet>
-
-	<servlet-mapping>
-	   <servlet-name>AddRole</servlet-name>
-	   <url-pattern>/AddRole</url-pattern>
-	</servlet-mapping>
-
-	<servlet>
-	   <servlet-name>UpdateRole</servlet-name>
-	   <servlet-class>UpdateRole</servlet-class>
-	</servlet>
-
-	<servlet-mapping>
-	   <servlet-name>UpdateRole</servlet-name>
-	   <url-pattern>/UpdateRole</url-pattern>
-	</servlet-mapping>
-
-	<servlet>
-	   <servlet-name>UpdateRoleView</servlet-name>
-	   <servlet-class>UpdateRoleView</servlet-class>
-	</servlet>
-
-	<servlet-mapping>
-	   <servlet-name>UpdateRoleView</servlet-name>
-	   <url-pattern>/UpdateRoleView</url-pattern>
-	</servlet-mapping>
-
-	<servlet>
-	   <servlet-name>RoleList</servlet-name>
-	   <servlet-class>RoleList</servlet-class>
-	</servlet>
-
-	<servlet-mapping>
-	   <servlet-name>RoleList</servlet-name>
-	   <url-pattern>/RoleList</url-pattern>
-	</servlet-mapping>
+ 	<welcome-file-list>
+	    <welcome-file>index.html</welcome-file>
+	</welcome-file-list>
 
 </web-app>
